--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kar_refah",
+  "name": "sample_react_ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,11 +17,8 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-iran-map": "^0.1.3",
-    "react-iran-provinces-map": "^0.1.3",
     "react-redux": "^9.2.0",
     "react-router": "^7.7.1",
-    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
